fixed line spacing

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     background-color: #333;
     color: white;
     font-size: 15px;
+    
 
 }
 
@@ -36,6 +37,7 @@ h1 {
 
 .jumbotron {
     background-color: #333;
+    line-height: 24px;
 }
 
 .social {
